--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<audio controls autoplay>
+		<source src="../MAD/images/MP3/MID.mp3" type="audio/mpeg">
+		<source src="../MAD/images/MP3/MID.ogv" type="audio/ogg">
+		Your browser does not support the audio element.
+	  </audio>
 	<head>
 		<title>MAD</title>
 		<meta charset="utf-8" />
