--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<audio controls autoplay>
-		<source src="../MAD/images/MP3/MID.mp3" type="audio/mpeg">
-		<source src="../MAD/images/MP3/MID.ogv" type="audio/ogg">
-		Your browser does not support the audio element.
-	  </audio>
+
 	<head>
 		<title>MAD</title>
 		<meta charset="utf-8" />
@@ -18,13 +14,17 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+		<audio controls autoplay>
+			<source src="../MAD/images/MP3/MID.mp3" type="audio/mpeg">
+			<source src="../MAD/images/MP3/MID.ogv" type="audio/ogg">
+			Your browser does not support the audio element.
+		  </audio>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Since:December 24,2021 </strong>//until:always.</a></h1>
+						<h1><a href="index.html"><strong>FELIZ 24! Since:December 24,2021 </strong>//until:always.</a></h1>
 						<nav>
 							<ul>
 								<!--<li><a href="#footer" class="icon solid fa-info-circle">24</a></li> -->
